--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ a.cta_button, a.cta_button:active {
     outline: none;
     -webkit-animation: fadein 2.5s ease-in;
     animation: fadein 2.5s ease-in;
-    padding-top: 25px;
+    padding-top: 26px;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -698,6 +698,43 @@ li.breadcrumb-item {
     } a.btn.btn-info.btn-lg:hover {
         font-size: 1rem;
     }
+}
+@media (max-width: 575px) {
+    a.cta_button, a.cta_button:active {
+        display: inline-block;
+        padding-left: .5rem;
+        position: absolute;
+        top: 2rem;
+        right: 4rem;
+        background: #011826;
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        font-family: 'Futura-PT', sans-serif;
+        font-size: 12px;
+        text-transform: uppercase;
+        transform: rotate(-7deg);
+        color: #fafafa;
+        margin: 0 auto;
+        border: none;
+        outline: none;
+        animation: fadein 2.5s ease-in;
+        vertical-align: middle;
+        text-align: center;
+        margin-bottom: 2rem;
+        padding-top: 22px;
+    } .cta_button:hover {
+        cursor: pointer;
+        transform: scale(1.05);
+        background: #69A8A9;
+        color: #fafafa;
+    }
+}
+
+@media (min-width: 320px) {
+    .cta_button {
+        max-width: 480px;
+    } 
 }
 
 @media only screen and (max-width: 320px) { 
