--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -638,24 +638,23 @@ li.breadcrumb-item {
 
 /*-------------------------------------------- Sections */
 #about {
-    padding: 80px 20px;
+    padding: 80px 40px;
     margin: 50px 20px;
 }
 
 #schedule {
-    padding: 80px 20px;
+    padding: 80px 40px;
     margin: 50px 20px;
 }
 
 #reviews {
-    padding: 80px 20px;
+    padding: 80px 40px;
     margin: 50px 20px;
 }
 
 #contact {
-    padding: 80px 20px;
-    margin-top: 50px;
-    margin-bottom: 10px;
+    padding: 80px 40px;
+    margin: 50px 20px;
 }
 /* end sections */
 
@@ -806,24 +805,23 @@ li.breadcrumb-item {
 
 @media only screen and (max-width: 320px) {
     #about {
-        padding: 80px 10px;
+        padding: 80px 30px;
         margin: 50px 20px;
     }
     
     #schedule {
-        padding: 80px 10px;
+        padding: 80px 30px;
         margin: 40px 20px;
     }
     
     #reviews {
-        padding: 80px 10px;
+        padding: 80px 30px;
         margin: 50px 20px;
     }
     
     #contact {
-        padding: 80px 10px;
-        margin-top: 50px;
-        margin-bottom: 10px;
+        padding: 80px 30px;
+        margin: 50px 20pxs;
     }
 }
 
@@ -900,19 +898,19 @@ li.breadcrumb-item {
 }
 
 @media (min-width: 768px) {
-    .container {
-        max-width: 720px; 
+    .container-fluid, .container {
+        max-width: 720px;
     } 
 }
 
 @media (min-width: 1200px) {
-    .container {
+    .container-fluid, .container {
         max-width: 1170px; 
     } 
 }
 
 @media (min-width: 1600px) {
-    .container {
+    .container-fluid, .container {
         max-width: 1300px; 
     } 
 }
